--- a/assig1/app/src/main/res/layout/activity_main.xml
+++ b/assig1/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,17 +15,16 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_black_24dp"
         app:backgroundTint="@android:color/holo_blue_bright"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="455dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:layout_editor_absoluteX="328dp"
+        tools:layout_editor_absoluteY="455dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"
-        android:scrollbars="vertical"
-        tools:listitem="@layout/recyclerview_item" />
+        android:scrollbars="vertical" />
 
 </android.support.constraint.ConstraintLayout>
