finished adding location functionality...including displaying them on frontend

--- a/assig2/part 2/app/src/main/res/layout/recyclerview_item.xml
+++ b/assig2/part 2/app/src/main/res/layout/recyclerview_item.xml
@@ -30,7 +30,6 @@
                 android:layout_toEndOf="@id/recyclerview_rank"
                 android:padding="4dp"
                 android:contentDescription="@string/recycler_view_image_desc" />
-
             <TextView
                 android:id="@+id/recyclerview_title"
                 android:layout_width="wrap_content"
@@ -39,17 +38,24 @@
                 android:layout_toEndOf="@id/recyclerview_image"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="#000000" />
-
             <TextView
-                android:id="@+id/recyclerview_desc"
+                android:id="@+id/recyclerview_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/recyclerview_title"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="0dp"
                 android:layout_toEndOf="@id/recyclerview_image"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
-
+            <TextView
+                android:id="@+id/recyclerview_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recyclerview_location"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@id/recyclerview_image"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
