--- a/assig3/app/src/main/res/layout/activity_login.xml
+++ b/assig3/app/src/main/res/layout/activity_login.xml
@@ -22,4 +22,13 @@
         android:layout_centerInParent="true"
         android:visibility="visible"
         android:layout_gravity="center"/>
+
+    <ProgressBar
+        android:id="@+id/sign_in_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="30dp"
+        android:visibility="invisible"
+        android:indeterminate="true"/>
 </FrameLayout>
