--- a/assig3/app/src/main/res/menu/menu_main.xml
+++ b/assig3/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/action_logout"
+        android:enabled="false"
+        app:showAsAction="never" />
 </menu>
