--- a/assig3/app/src/main/res/layout/activity_add_image.xml
+++ b/assig3/app/src/main/res/layout/activity_add_image.xml
@@ -2,35 +2,37 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/add_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:scaleType="centerInside"
+        android:contentDescription="@string/vote_image_desc"
         android:gravity="center"
         android:padding="15dp"
-        android:contentDescription="@string/vote_image_desc" />
+        android:scaleType="centerInside" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/upload_image"
-            android:layout_weight="0.5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="@string/get_gallery_image"
             tools:ignore="ButtonStyle" />
+
         <Button
             android:id="@+id/capture_image"
-            android:layout_weight="0.5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="@string/get_camera_image"
             tools:ignore="ButtonStyle" />
     </LinearLayout>
@@ -39,12 +41,12 @@
         android:id="@+id/edit_image_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_name"
         android:inputType="textAutoComplete"
         android:padding="@dimen/small_padding"
-        android:layout_marginBottom="@dimen/big_padding"
-        android:layout_marginTop="@dimen/big_padding"
         android:textSize="18sp"
         tools:ignore="Autofill" />
 
@@ -52,12 +54,12 @@
         android:id="@+id/edit_image_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_desc"
         android:inputType="textAutoComplete"
         android:padding="@dimen/small_padding"
-        android:layout_marginBottom="@dimen/big_padding"
-        android:layout_marginTop="@dimen/big_padding"
         android:textSize="18sp"
         tools:ignore="Autofill" />
 
