--- a/assig3/app/src/main/res/layout/fragment_vote.xml
+++ b/assig3/app/src/main/res/layout/fragment_vote.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="160dp"
+        android:backgroundTint="#F46036"
+        android:textColor="#FFF"
         android:text="@string/negative_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -22,15 +25,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="160dp"
+        android:backgroundTint="#5B85AA"
+        android:textColor="#FFF"
         android:text="@string/positive_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/vote_image_description"
-        android:layout_width="348dp"
-        android:layout_height="68dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
@@ -42,8 +47,8 @@
 
     <TextView
         android:id="@+id/vote_image_title"
-        android:layout_width="350dp"
-        android:layout_height="33dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
@@ -53,18 +58,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/vote_image_description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/vote_image"
-        android:layout_width="336dp"
-        android:layout_height="346dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:adjustViewBounds="false"
+        android:layout_marginBottom="16dp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/vote_image_desc"
         android:cropToPadding="false"
         android:scaleType="fitCenter"
@@ -73,5 +77,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
-
 </android.support.constraint.ConstraintLayout>
