--- a/assig3/app/src/main/res/layout/recycler_view_item.xml
+++ b/assig3/app/src/main/res/layout/recycler_view_item.xml
@@ -18,21 +18,11 @@
             android:layout_height="wrap_content"
             android:padding="8dp">
 
-            <TextView
-                android:id="@+id/recyclerview_rank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:gravity="center"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:textColor="#000000"
-                android:text="1"/>
-
             <ImageView
                 android:id="@+id/recyclerview_image"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
-                android:layout_toEndOf="@id/recyclerview_rank"
+                android:layout_marginStart="5dp"
                 android:padding="4dp"
                 android:src="@mipmap/ic_launcher"
                 android:contentDescription="@string/recycler_view_image_desc" />
@@ -53,6 +43,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="0dp"
                 android:layout_toEndOf="@id/recyclerview_image"
+                android:text="@string/location"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
             <TextView
                 android:id="@+id/recyclerview_desc"
@@ -64,6 +55,16 @@
                 android:layout_toEndOf="@id/recyclerview_image"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                 android:text="@string/image_desc"/>
+            <TextView
+                android:id="@+id/recyclerview_votes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_below="@id/recyclerview_desc"
+                android:layout_toEndOf="@+id/recyclerview_image"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                android:textColor="#000000"
+                android:text="@string/vote_text"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
