--- a/assig3/app/src/main/res/layout/recycler_view_item.xml
+++ b/assig3/app/src/main/res/layout/recycler_view_item.xml
@@ -65,6 +65,15 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                 android:textColor="#000000"
                 android:text="@string/vote_text"/>
+
+            <TextView
+                android:id="@+id/recyclerview_lables"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/recyclerview_votes"
+                android:backgroundTint="#87F1FF"
+                android:textColor="#BD8B9C"
+                android:text="Lables"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
